Actualizadas las traducciones.

--- a/Core/Translation/cs_CZ.json
+++ b/Core/Translation/cs_CZ.json
@@ -1245,8 +1245,8 @@
     "recreate-system-integrity": "Volver a crear la integridad del sistema",
     "rectified-invoice": "Factura rectificativa",
     "rectified-invoice-p": "Las facturas son documentos mercantiles y tienen una serie de restricciones legales. No se pueden eliminar ni modificar. Solamente se permiten devoluciones totales o parciales. Utilice este formulario para hacer una devolución sobre esta factura.",
-    "rectified-invoices": "Facturas rectificativas",
-    "rectifying": "Rectificativa",
+    "rectified-invoices": "Opravené faktury",
+    "rectifying": "Oprava",
     "rectifying-serie": "Serie rectificativa",
     "redirect": "Redirección",
     "reference": "Referencia",
@@ -1254,7 +1254,7 @@
     "refresh": "Recargar",
     "refresh-page": "Recargar página",
     "refund-amount": "Cantidad devuelta",
-    "refund-payment-concept": "Devolución del recibo %document%",
+    "refund-payment-concept": "Vrácení platebního dokladu %document%",
     "refunds": "Devoluciones",
     "register": "Registrar",
     "register-installation": "Registrar instalación",
@@ -1266,27 +1266,27 @@
     "reject": "Rechazar",
     "rejected": "Rechazado",
     "related": "Relacionado",
-    "related-subaccount-bank-charges": "Subcuenta relacionada para gastos bancarios (comisiones, etc)",
-    "related-subaccount-purchases-sales": "Subcuenta relacionada para compras y ventas",
+    "related-subaccount-bank-charges": "Přidružený podúčet pro bankovní poplatky (poplatky za bankovní služby atd.)",
+    "related-subaccount-purchases-sales": "Přidružený podúčet pro nákupy a prodeje",
     "reloading": "Recargando...",
     "remove-filter": "Eliminar filtro",
     "remove-from-list": "Quitar",
-    "removing-logs-until": "Eliminando logs hasta el %date%",
+    "removing-logs-until": "Odstraňují se záznamy až do %date%",
     "renew": "Renovar",
     "renumber": "Renumerar",
     "renumber-accounting": "Renumerar Asientos",
     "renumber-accounting-error": "Ha ocurrido un error durante la renumeración de asientos en el ejercicio fiscal %exerciseCode%",
     "renumber-accounting-ok": "Renumeración de asientos completada",
-    "renumber-accounting-p": "Renumera los asientos por fecha, de menor a mayor",
-    "renumber-invoices-p": "Renumera las facturas en base a la fecha, de menor a mayor",
-    "renumber-invoices-success": "Las facturas del ejercicio '%exercise%' han sido renumeradas correctamente",
+    "renumber-accounting-p": "Přečísluje účty podle data od nejmenšího po největší",
+    "renumber-invoices-p": "Přečísluje faktury podle data od nejmenšího po největší",
+    "renumber-invoices-success": "Faktury pro období '%exercise%' byly úspěšně přečíslovány",
     "repeat-new-password": "Repite la contraseña",
     "repeat-password": "Repetir contraseña",
     "reply": "Respuesta",
     "report": "Informe",
     "report-grouping-account": "Agrupar por cuentas",
     "report-non-grouping-account": "No agrupar por cuentas",
-    "report-taxes-p": "Este informe permite obtener el desglose de impuestos de las facturas de compra o de venta del rango seleccionado",
+    "report-taxes-p": "Tento report umožňuje získat rozpad daní z faktur nákupu nebo prodeje ve vybraném období",
     "reports": "Informes",
     "request-sent": "Petición enviada",
     "required": "Obligatorio",
