--- a/Core/Translation/eu_ES.json
+++ b/Core/Translation/eu_ES.json
@@ -485,7 +485,7 @@
     "dont-sell-below-cost": "Ez saldu kostu prezioaren azpitik",
     "download": "Deskarga",
     "download-completed": "Deskarga amaitua",
-    "download-error": "Errore bat gertatu da deskargatzean. Kodea %status% - %error%",
+    "download-error": "Errorea gertatu da deskargatzerakoan. Kodea %status% - %error%",
     "download-xml": "XMLa Deskargatu",
     "downloads": "Deskargak",
     "drag": "Arrastatu",
@@ -500,7 +500,7 @@
     "email": "Posta elektronikoa",
     "email-bcc": "Emaila Kopia Eskutuarekin",
     "email-cc": "Emaila Karboi Kopiarekin",
-    "email-not-configured": "Posta elektronikoa ez dago konfiguratuta. Administratzailea, kontrol panela, aplikazioaren lehentasunak menutik ahal duzu konfiguratu.",
+    "email-not-configured": "Posta elektronikoa konfiguratu gabe dago. Administratzailea, kontrol panela, aplikazioaren lehentasunak menutik ahal duzu konfiguratu.",
     "email-not-sent": "Bidali gabe",
     "email-notification": "Email Jakinarazpena",
     "email-notification-disabled": "Email jakinarazpena %name% desgaituta dago",
@@ -1200,7 +1200,7 @@
     "profile": "Perfila",
     "profit-and-loss": "Galera eta irabaziak",
     "profit-and-loss-balance": "Galdu-irabazien kontua",
-    "profits": "Beneficios",
+    "profits": "Labiak",
     "project": "Proiektua",
     "projects": "Proiektuak",
     "provider-reference": "Hornitzailearen erreferentzia",
@@ -1227,8 +1227,8 @@
     "rates": "Tarifak",
     "re": "BE",
     "re-open": "Berriz ireki",
-    "react": "Reaccionar",
-    "read-message-by": "Leído por %nick% el %date%",
+    "react": "Reagitu",
+    "read-message-by": "Irakurri %nick% %date% hartan",
     "read-more": "Gehiago irakurri",
     "readonly": "Irakurri bakarrik",
     "rebuild": "Berregin",
@@ -1245,8 +1245,8 @@
     "recreate-system-integrity": "Sistemaren integritatea berriz sortu",
     "rectified-invoice": "Zuzenketa faktura",
     "rectified-invoice-p": "Fakturak dokumentu komertzialak dira eta legezko hainbat muga dituzte. Ezin dira ezabatu edo aldatu. Itzultze osoak edo partzialak onartzen dira soilik. Erabili formulario hau faktura honen itzulketa egiteko.",
-    "rectified-invoices": "Facturas rectificativas",
-    "rectifying": "Rectificativa",
+    "rectified-invoices": "Fakturak zuzenduak",
+    "rectifying": "Zuzentzen",
     "rectifying-serie": "Serie zuzentzailea",
     "redirect": "Berbideratzea",
     "reference": "Erreferentzia",
