--- a/Core/Translation/fr_FR.json
+++ b/Core/Translation/fr_FR.json
@@ -973,8 +973,8 @@
     "month-5": "Mai",
     "month-6": "Juin",
     "month-7": "Juillet",
-    "month-8": "Agosto",
-    "month-9": "Septiembre",
+    "month-8": "Août",
+    "month-9": "Septembre",
     "month-name": "Nom du mois",
     "month-wildcard-info": "Mois en cours (de la date actuelle)",
     "monthly": "Mensuel",
