--- a/Core/Translation/it_IT.json
+++ b/Core/Translation/it_IT.json
@@ -450,19 +450,19 @@
     "destination-warehouse": "Magazzino di Destinazione",
     "detail": "dettaglio",
     "details": "Dettagli",
-    "difference": "difference",
+    "difference": "differenza",
     "different-passwords": "Le password non corrispondono %1$s",
     "different-than": "Diverso da",
     "disable": "disattivare",
-    "disable-plugins": "Desactivar plugins",
+    "disable-plugins": "Disabilita plugin",
     "disabled": "Disabilitato",
     "disabled-plugins": "Plugin disabilitati",
     "discharge-date": "Data di scarico: 0",
     "discount": "Sconto",
     "display": "Visualizza",
     "display-date": "Data di visualizzazione",
-    "do-not-disable-plugins": "No desactivar plugins",
-    "do-not-group": "do-not-group",
+    "do-not-disable-plugins": "Non disabilitare i plugin",
+    "do-not-group": "non raggruppare",
     "do-nothing": "Non fare niente",
     "doc-type": "Tipo di documento",
     "document": "Documento",
