--- a/Core/Translation/pt_PT.json
+++ b/Core/Translation/pt_PT.json
@@ -237,12 +237,12 @@
     "cifnif": "TIC \/ TIN",
     "cities": "cidades",
     "city": "Cidade",
-    "click-link-to-add": "click-link-to-add",
+    "click-link-to-add": "clicar no link para adicionar",
     "clone": "Clone",
     "clone-account-entry": "Duplicate the accounting entry",
     "close": "Fechar",
-    "close-box": "Cerrar caja",
-    "close-exercise": "close-exercise",
+    "close-box": "Fechar caixa",
+    "close-exercise": "terminar exercício",
     "closed": "Closed",
     "closed-exercise": "O exercício 0 está fechado.",
     "closed-exercise-cant-change-date": "O exercício 0 está fechado. Você não pode mudar a data.",
