--- a/Core/Translation/va_ES.json
+++ b/Core/Translation/va_ES.json
@@ -500,11 +500,11 @@
     "email": "Correu electrònic",
     "email-bcc": "Email en Còpia Oculta",
     "email-cc": "Email en còpia",
-    "email-not-configured": "El correu electònic no està configurat",
+    "email-not-configured": "El correu electrònic no està configurat",
     "email-not-sent": "No s'ha enviat",
-    "email-notification": "Notificación por email",
-    "email-notification-disabled": "La notificación de email %name% está desactivada",
-    "email-notification-not-exists": "Notificación de email %name% no encontrada",
+    "email-notification": "Notificació per correu electrònic",
+    "email-notification-disabled": "La notificació de correu electrònic %name% està desactivada",
+    "email-notification-not-exists": "Notificació de correu electrònic %name% no trobada",
     "email-replies": "Respuesta de emails",
     "email-replies-to": "email-replies-to",
     "email-sent": "Enviat per email",
