--- a/Core/Translation/es_ES.json
+++ b/Core/Translation/es_ES.json
@@ -371,6 +371,7 @@
     "dashboard": "Tablero",
     "dashboard-backup": "Copia de seguridad",
     "dashboard-backup-p": "Le recordamos que tiene instalado FacturaScripts en su PC, por tanto los datos (las facturas, clientes, etc...) se almacenan en su PC y solamente en su PC. Haga copias de seguridad de forma regular y guarde esas copias lejos del PC.",
+    "dashboard-core-update": "Actualizar FacturaScripts",
     "dashboard-for": "Tablero de %company%",
     "data-source": "Datos de origen",
     "database": "Base de datos",
