Cambiado el nombre a la variable de google tag manager.

--- a/Core/Translation/ca_ES.json
+++ b/Core/Translation/ca_ES.json
@@ -1333,6 +1333,7 @@
     "selected-quantity": "Quant. seleccionada",
     "selector-number": "Selector",
     "send": "Enviar",
+    "send-anonymous-data": "Enviar dades anònimes",
     "send-audios": "Enviar àudios",
     "send-documents": "Enviar documents",
     "send-images": "Enviar imatges",
