--- a/Core/Translation/es_MX.json
+++ b/Core/Translation/es_MX.json
@@ -1333,6 +1333,7 @@
     "selected-quantity": "Cant. seleccionada",
     "selector-number": "Selector",
     "send": "enviar",
+    "send-anonymous-data": "Enviar datos anónimos",
     "send-audios": "Enviar audios",
     "send-documents": "Enviar documentos",
     "send-images": "Enviar imágenes",
