--- a/Core/Translation/eu_ES.json
+++ b/Core/Translation/eu_ES.json
@@ -1333,6 +1333,7 @@
     "selected-quantity": "Hautatutako kantitatea",
     "selector-number": "Selector",
     "send": "Bidali",
+    "send-anonymous-data": "Enviar datos anónimos",
     "send-audios": "Enviar audios",
     "send-documents": "Enviar documentos",
     "send-images": "Enviar imágenes",
