--- a/Core/Translation/fr_FR.json
+++ b/Core/Translation/fr_FR.json
@@ -485,7 +485,7 @@
     "dont-sell-below-cost": "Ne pas vendre en dessous du coût",
     "download": "télécharger",
     "download-completed": "Téléchargement terminé",
-    "download-error": "Erreur de téléchargement. Code %status% - %error%",
+    "download-error": "Erreur lors du téléchargement. Code %status% - %error%.",
     "download-xml": "Télécharger XML",
     "downloads": "téléchargements",
     "drag": "Traînée",
@@ -861,7 +861,7 @@
     "last-week": "Semaine dernière",
     "last-year": "Année dernière",
     "latitude": "Latitude",
-    "latitude-abb": "Lat",
+    "latitude-abb": "latitude-abb",
     "ledger": "Quotidien",
     "left": "Gauche",
     "level": "Niveau",
@@ -884,13 +884,13 @@
     "location": "Localisation",
     "lock-accounting": "Verrouiller la comptabilité",
     "lock-entry": "Verrouiller l'entrée",
-    "lock-invoice": "Verrouiller la facture",
+    "lock-invoice": "facture bloquée",
     "lock-unlock": "Verrouiller-Déverrouiller",
     "lock-unlock-account-entry": "Bloquer\/Débloquer l'entrée comptable",
     "locked": "Fermé à clef",
     "log": "Bûche",
     "login": "S'identifier",
-    "login-cookie-fail": "Le cookie de session a échoué",
+    "login-cookie-fail": "Échec du login-cookie",
     "login-image": "Imagen de login",
     "login-ok": "Connectez-vous avec succès (cookie). Utilisateur: '%nick'",
     "login-password-fail": "Échec de la connexion",
@@ -904,7 +904,7 @@
     "logs": "Bûches",
     "long": "Longue",
     "longitude": "Longitude",
-    "longitude-abb": "Long",
+    "longitude-abb": "longueur-abb",
     "look-for-gaps": "Rechercher les écarts",
     "lot": "Lot",
     "low-security": "Faible sécurité",
@@ -1010,13 +1010,13 @@
     "nick": "Nick",
     "no": "Non",
     "no-data": "Pas de données",
-    "no-data-received-form": "Ningún dato recibido por formulario",
+    "no-data-received-form": "Aucune donnée reçue par formulaire",
     "no-extra-lines": "Pas de lignes supplémentaires",
-    "no-gaps-found": "Ningún hueco encontrado",
+    "no-gaps-found": "Aucune lacune constatée",
     "no-invoice": "Pas de facture",
     "no-outstanding-amount": "Il n'y a pas de montant impayé",
     "no-print-permission": "No tiene permiso para imprimir o exportar",
-    "no-reference": "Sin referencia",
+    "no-reference": "Pas de référence",
     "no-selected-item": "Aucun élément sélectionné",
     "no-stock": "Ne pas contrôler le stock",
     "non-editable-accounting-entry": "Entrée comptable non modifiable",
@@ -1028,27 +1028,27 @@
     "not-allowed-modify": "Vous n'êtes pas autorisé à modifier",
     "not-enough-stock": "Stock insuffisant pour %reference%",
     "not-passed-integrity-check": "Certains fichiers n'ont pas passé le test d'intégrité...<br\\\/>Vous pouvez <a class='alert-link' target='_blank' href='IntegritySystemCheck'>obtenir plus de détails ici<\/a>.",
-    "not-stored-content": "Contenido no almacenado",
+    "not-stored-content": "Contenu non stocké",
     "not-valid-email": "Adresse e-mail incorrecte %email%",
     "not-valid-fiscal-number": "Le %type% %number% n'est pas valable",
-    "not-valid-image": "No es una imagen válida",
+    "not-valid-image": "Image non valide",
     "not-valid-percentage-retention": "Pourcentage de rétention incorrect",
     "note": "Note",
     "notes": "Remarques",
     "notice": "Avis",
     "notices": "Avis",
-    "notification": "Notificación",
+    "notification": "Notification",
     "notifications": "Notificaciones",
-    "november": "Noviembre",
+    "november": "Novembre",
     "number": "Nombre",
-    "number-attachments": "Nº de adjuntos",
+    "number-attachments": "No. de pièces jointes",
     "number-length": "Longueur du nombre",
     "number-recipients": "Nº destinataires",
     "number2": "numéro 2",
     "numeric-formats": "Formats numériques",
     "numsupplier": "Num. fournisseur",
     "observations": "Observations",
-    "october": "Octubre",
+    "october": "Octobre",
     "offsetting-account": "Compte de compensation",
     "only-active": "Actif seulement",
     "only-charged": "Facturé seulement",
@@ -1059,12 +1059,12 @@
     "only-suspended": "Suspendu seulement",
     "open": "Ouvrir",
     "open-exercise": "Ouvrir l'exercice",
-    "open-tab": "Abrir en una nueva pestaña",
+    "open-tab": "Ouvrir dans un nouvel onglet",
     "opened": "Ouvert",
     "opening-acounting-completed": "Ouverture de l'exercice achevée",
     "opening-operation": "Apertura",
     "operation": "Operación",
-    "operator": "Operador",
+    "operator": "Opérateur",
     "option": "option",
     "optional": "Optionnel",
     "options": "Options",
@@ -1076,7 +1076,7 @@
     "origin": "Origine",
     "origin-warehouse": "Entrepôt Origine",
     "original": "Original",
-    "original-file": "Fichero original",
+    "original-file": "Fichier original",
     "other-data": "Autre informations",
     "others-filters": "D'autres filtres",
     "out-of-stock": "Rupture de stock",
@@ -1090,7 +1090,7 @@
     "pagename": "Nom de la page",
     "pages": "pages",
     "paid": "Payé",
-    "paid-or-unpaid": "Pagado o impagado",
+    "paid-or-unpaid": "Payé ou non",
     "paid-receipts-prevent-action": "L'action ne peut être exécutée car les reçus sont encaissés",
     "parent": "Parent",
     "parent-account": "Compte Parent",
@@ -1099,12 +1099,12 @@
     "parent-group-cant-be-the-same-group": "Le groupe parent ne peut pas être le même groupe",
     "parent-group-loop": "Groupe parent %parentGroup% provoquant une relation circulaire.",
     "partnumber": "Numéro d'article",
-    "passenger": "Pasajero",
+    "passenger": "Passager",
     "password": "Mot de passe",
     "pattern": "Structure",
-    "pattern-without-number": "El patrón elegido no incluye número, por lo que es muy probable que genere códigos duplicados.",
-    "pattern-without-serie": "El patrón elegido no incluye serie, por lo que es posible que genere códigos duplicados para cada serie",
-    "pattern-without-year": "El patrón elegido no incluye ejercicio o fecha, por lo que es posible que genere códigos duplicados en cada ejercicio",
+    "pattern-without-number": "Le modèle choisi ne comporte pas de numéro, il est donc très probable qu'il génère des codes en double.",
+    "pattern-without-serie": "Le motif choisi ne comporte pas de séries, il est donc possible de générer des codes en double pour chaque série",
+    "pattern-without-year": "Le modèle choisi n'inclut ni l'exercice ni la date, il est donc possible qu'il génère des codes en double dans chaque exercice.",
     "pay": "Payer",
     "pay-with-card": "Payer par carte",
     "payment": "Paiement",
@@ -1114,9 +1114,9 @@
     "payment-methods": "Méthodes de payement",
     "payments": "Paiements",
     "pct": "% pct",
-    "pct-irpf": "% IRPF",
+    "pct-irpf": "% impôt sur le revenu",
     "pct-surcharge": "% Supplément",
-    "pct-tax": "% impuestos",
+    "pct-tax": "% d'impôts",
     "pct-vat": "% D'impôt",
     "pending": "En attente",
     "pending-invoices-button": "Fact. en att. :",
@@ -1128,12 +1128,12 @@
     "percentage-surcharge": "% Supplément",
     "percentage-vat": "% TVA",
     "period": "Période",
-    "personalized": "Personalizado",
+    "personalized": "Personnalisé",
     "phase": "Phase",
     "phone": "téléphone",
     "phone2": "Téléphone 2",
     "phones": "Téléphones",
-    "php-extension-needed": "Se requiere la extensión %extension% en la configuración de PHP",
+    "php-extension-needed": "L'extension %extension% est requise dans la configuration PHP",
     "php-extension-not-found": "Vous n'avez pas installé l'extension %extension% de PHP.",
     "php-support-end": "Le support pour PHP %current% sera bientôt terminé. Veuillez mettre à jour PHP vers la version %min% ou ultérieure.",
     "physical-stock": "Stock physique",
@@ -1144,7 +1144,7 @@
     "plugin-deleted": "Plugin %pluginName% supprimé avec succès.",
     "plugin-disabled": "Le plugin %pluginName% a été désactivé correctement.",
     "plugin-enabled": "Le plugin %pluginName% a été activé avec succès.",
-    "plugin-file-too-big": "Este servidor no permite subir archivos de más de %size% MB. Por favor, aumenta el tamaño máximo de subida de archivos en PHP o copia el archivo a la carpeta Plugins.",
+    "plugin-file-too-big": "Ce serveur n'autorise pas le téléchargement de fichiers d'une taille supérieure à %size% Mo. Veuillez augmenter la taille maximale de téléchargement de fichier en PHP ou copier le fichier dans le dossier Plugins.",
     "plugin-installation-disabled": "L'installation de modules est désactivée sur ce serveur",
     "plugin-installed": "Plugin '%pluginName%' installé",
     "plugin-need-update": "El plugin %plugin% necesitará actualización para funcionar con la nueva versión de FacturaScripts.",
@@ -1152,7 +1152,7 @@
     "plugin-needed": "Le plugin %pluginName% est nécessaire.",
     "plugin-needs-fs-version": "Le module %pluginName% nécessite la version %minVersion% de FacturaScripts, alors que vous utilisez la version %version% de FacturaScripts.",
     "plugin-not-compatible": "Le module %pluginName% n'est pas compatible avec FacturaScripts 2018.",
-    "plugin-order": "Orden: %num%",
+    "plugin-order": "Commande : %num%",
     "plugin-phpversion-error": "El plugin %pluginName% requiere PHP %php% o superior",
     "plugin-removal-disabled": "La suppression de modules est désactivée sur ce serveur",
     "plugin-unsupported-version": "Le module %pluginName% est adapté pour FacturaScripts 2017 ou plus ancien, alors que vous utilisez la version %version% de FacturaScripts.",
@@ -1160,7 +1160,7 @@
     "plugins": "Modules",
     "plugins-p": "Les modules permettent d'ajouter de nouvelles fonctionnalités. Ajoutez ceux dont vous avez besoin maintenant. Vous pourrez toujours le faire quand vous le souhaitez depuis le menu Administration.",
     "points": "Points",
-    "points-of-interest": "Puntos de interés",
+    "points-of-interest": "Points d'intérêt",
     "port": "Port",
     "position": "Position",
     "positive-balance": "Solde positif",
@@ -1173,14 +1173,14 @@
     "previous": "précédent",
     "previous-balance": "Solde précédent",
     "previous-documents": "Documents précédents",
-    "previous-quarter": "Trimestre anterior",
-    "previously-purchased-from-supplier": "Comprado anteriormente al proveedor",
-    "previously-sold-to-customer": "Vendido anteriormente al cliente",
+    "previous-quarter": "Trimestre précédent",
+    "previously-purchased-from-supplier": "Déjà acheté auprès d'un fournisseur",
+    "previously-sold-to-customer": "Déjà vendu au client",
     "price": "Prix",
     "price-with-tax": "Prix TTC",
     "principal": "Principale",
     "print": "Impression",
-    "print-bank-data": "Imprimir cuenta bancaria",
+    "print-bank-data": "Imprimer le compte bancaire",
     "print-data-records": "Imprimer tous les enregistrements",
     "print-export-options": "Options d'impression et d'exportation",
     "print-list-of-records": "Imprimer la liste des enregistrements",
@@ -1191,8 +1191,8 @@
     "printing-formats": "Formats d'impression",
     "priority": "Priorité",
     "private": "Privé",
-    "private-key": "Clave privada",
-    "process": "Proceso",
+    "private-key": "Clé privée",
+    "process": "Processus",
     "processing": "Traitement",
     "product": "Produit",
     "product-not-found": "Le produit %ref% n'a pas été trouvé",
@@ -1200,14 +1200,14 @@
     "profile": "Perfil",
     "profit-and-loss": "Pertes et profits",
     "profit-and-loss-balance": "Comptes de profits et pertes",
-    "profits": "Beneficios",
+    "profits": "Avantages",
     "project": "Projet",
     "projects": "Projets",
     "provider-reference": "Référence du fournisseur",
     "province": "département",
     "provinces": "Provinces",
     "public": "Publique",
-    "public-key": "Clave pública",
+    "public-key": "Clé publique",
     "purchase-rate": "Taux d'achat",
     "purchased-quantity": "Quantité achetée",
     "purchases": "Achats",
@@ -1219,7 +1219,7 @@
     "pvptotal-line-error": "Erreur dans la valeur pvptotal de la ligne %reference% du document. Valeur correcte: %total%",
     "quantity": "Quantité",
     "quantity-abb": "Qté",
-    "quantity-remaining": "Cantidad restante",
+    "quantity-remaining": "Montant restant",
     "quantity-served": "Quantité servie",
     "quantity-sold": "Quantité vendue",
     "randomizer-generating-more-items": "Génération de plus d'éléments…",
@@ -1227,8 +1227,8 @@
     "rates": "Les taux",
     "re": "RE",
     "re-open": "Réouvrir",
-    "react": "Reaccionar",
-    "read-message-by": "Leído por %nick% el %date%",
+    "react": "Réagir",
+    "read-message-by": "Lu par %nick% le %date%",
     "read-more": "En savoir plus",
     "readonly": "Lecture seule",
     "rebuild": "Reconstituer",
@@ -1245,16 +1245,16 @@
     "recreate-system-integrity": "Recréer l'intégrité du système",
     "rectified-invoice": "Facture rectifiée",
     "rectified-invoice-p": "Les factures sont des documents commerciaux, et sont soumises à un certain nombre de restrictions légales. Elle ne peuvent être effacées ou modifiées, seul des retour totaux ou partiels sont autorisés. Utilisez ce formulaire pour effectuer un retour de cette facture.",
-    "rectified-invoices": "Facturas rectificativas",
-    "rectifying": "Rectificativa",
+    "rectified-invoices": "Factures rectificatives",
+    "rectifying": "Rectification",
     "rectifying-serie": "Série des rectificatifs",
-    "redirect": "Redirección",
+    "redirect": "Redirection",
     "reference": "Référence",
     "reference+description": "Référence + Description",
     "refresh": "Rafraîchir",
     "refresh-page": "Rafraîchir la page",
     "refund-amount": "Montant retourné",
-    "refund-payment-concept": "Devolución del recibo %document%",
+    "refund-payment-concept": "Remboursement du reçu %document%",
     "refunds": "Remboursements",
     "register": "S'enregistrer",
     "register-installation": "Enregistrer cette installation",
@@ -1333,6 +1333,7 @@
     "selected-quantity": "Qté sélectionnée",
     "selector-number": "Selector",
     "send": "Envoyer",
+    "send-anonymous-data": "Enviar datos anónimos",
     "send-audios": "Enviar audios",
     "send-documents": "Enviar documentos",
     "send-images": "Enviar imágenes",
