--- a/Core/Translation/gl_ES.json
+++ b/Core/Translation/gl_ES.json
@@ -1333,6 +1333,7 @@
     "selected-quantity": "Cantidade seleccionada",
     "selector-number": "Selector",
     "send": "Enviar",
+    "send-anonymous-data": "Enviar datos anónimos",
     "send-audios": "Enviar audios",
     "send-documents": "Enviar documentos",
     "send-images": "Enviar imaxes",
