--- a/Core/Translation/it_IT.json
+++ b/Core/Translation/it_IT.json
@@ -422,7 +422,7 @@
     "delivery-note-email-subject": "oggetto-email-sul-foglio-di-consegna",
     "delivery-note-email-text": "testo-email-sul-foglio-di-consegna",
     "delivery-notes": "scivola imballaggio",
-    "delivery-notes-button": "Penna. del. gli appunti:",
+    "delivery-notes-button": "Note di consegna:",
     "department": "dipartimento",
     "departments": "dipartimenti",
     "desc": "Descrizione",
@@ -474,21 +474,21 @@
     "document-type": "Tipo documento",
     "document-type-valid-length": "Tipo di documento non valido. Deve essere compreso tra 1 e 20 caratteri.",
     "document-wildcard-info": "Document indicated in the head of the accounting entry",
-    "document-without-total": "Documento %document% sin totales o con el total a 0.",
+    "document-without-total": "Documento %document% senza totali o con il totale a 0.",
     "documentation": "documentazione",
-    "documents": "Documentos",
+    "documents": "Documenti",
     "documents-generated": "documents-generated",
     "domiciled": "Domiciliato",
     "done": "done",
-    "done-date": "Fecha finalización",
+    "done-date": "Data completamento",
     "dont-sell-above-pvp": "Non vendere al di sopra del prezzo al dettaglio",
     "dont-sell-below-cost": "Non vendere sottocosto",
     "download": "Scarica",
     "download-completed": "download-completed",
-    "download-error": "Error al descargar. Código %status% - %error%",
-    "download-xml": "Descargar XML",
+    "download-error": "Errore durante il download. Codice %status% - %error%",
+    "download-xml": "Scarica XML",
     "downloads": "downloads",
-    "drag": "Arrastrar",
+    "drag": "Trascinare",
     "dto": "Disco.",
     "dto-2": "dto-2",
     "duplicate-record": "duplicate-record",
@@ -1333,6 +1333,7 @@
     "selected-quantity": "Quantità selezionata",
     "selector-number": "Selector",
     "send": "Invia",
+    "send-anonymous-data": "Enviar datos anónimos",
     "send-audios": "Enviar audios",
     "send-documents": "Enviar documentos",
     "send-images": "Enviar imágenes",
