--- a/Core/Translation/pl_PL.json
+++ b/Core/Translation/pl_PL.json
@@ -1333,6 +1333,7 @@
     "selected-quantity": "Cant. seleccionada",
     "selector-number": "Selector",
     "send": "Enviar",
+    "send-anonymous-data": "Wysyłanie anonimowych danych",
     "send-audios": "Enviar audios",
     "send-documents": "Enviar documentos",
     "send-images": "Enviar imágenes",
