--- a/Core/Translation/pt_PT.json
+++ b/Core/Translation/pt_PT.json
@@ -246,11 +246,11 @@
     "closed": "Closed",
     "closed-exercise": "O exercício 0 está fechado.",
     "closed-exercise-cant-change-date": "O exercício 0 está fechado. Você não pode mudar a data.",
-    "closing-accounting-completed": "closing-accounting-completed",
-    "closing-closing-concept": "closing-closing-concept",
-    "closing-opening-concept": "closing-opening-concept",
+    "closing-accounting-completed": "fecho-contabilidade-concluída",
+    "closing-closing-concept": "fecho-conceito-de-fechamento",
+    "closing-opening-concept": "fecho-conceito-de-abertura",
     "closing-operation": "Cierre",
-    "closing-regularization-concept": "closing-regularization-concept",
+    "closing-regularization-concept": "fecho-conceito-de-regularizacao",
     "codbarras": "Código de barras",
     "code": "Código",
     "codiso": "Código ISO",
@@ -1333,6 +1333,7 @@
     "selected-quantity": "approve-quantity",
     "selector-number": "Selector",
     "send": "send",
+    "send-anonymous-data": "Enviar datos anónimos",
     "send-audios": "Enviar audios",
     "send-documents": "Enviar documentos",
     "send-images": "Enviar imágenes",
