--- a/Core/Translation/cs_CZ.json
+++ b/Core/Translation/cs_CZ.json
@@ -1294,7 +1294,7 @@
     "reserved": "Reservado",
     "reset": "Restablecer",
     "resource": "Recurso",
-    "respond": "Responder",
+    "respond": "Odpovědět",
     "restore": "Restaurar",
     "restore-data": "Restaurar datos",
     "result": "Resultado",
@@ -1333,6 +1333,7 @@
     "selected-quantity": "Cant. seleccionada",
     "selector-number": "Selector",
     "send": "Enviar",
+    "send-anonymous-data": "Enviar datos anónimos",
     "send-audios": "Enviar audios",
     "send-documents": "Enviar documentos",
     "send-images": "Enviar imágenes",
