--- a/Core/Translation/va_ES.json
+++ b/Core/Translation/va_ES.json
@@ -505,7 +505,7 @@
     "email-notification": "Notificació per correu electrònic",
     "email-notification-disabled": "La notificació de correu electrònic %name% està desactivada",
     "email-notification-not-exists": "Notificació de correu electrònic %name% no trobada",
-    "email-replies": "Respuesta de emails",
+    "email-replies": "Resposta d'emails",
     "email-replies-to": "email-replies-to",
     "email-sent": "Enviat per email",
     "email-sent-to": "Email enviat a %email%",
@@ -513,7 +513,7 @@
     "email-to": "Email per a",
     "emails": "Emails",
     "emails-sent": "Correus enviats",
-    "employee": "Employee",
+    "employee": "Empleat",
     "employees": "employees",
     "empty": "Buit",
     "empty-contact-data": "El contacto debe tener nombre o email o dirección",
@@ -1333,6 +1333,7 @@
     "selected-quantity": "Quant. seleccionada",
     "selector-number": "Selector",
     "send": "Enviar",
+    "send-anonymous-data": "Enviar datos anónimos",
     "send-audios": "Enviar audios",
     "send-documents": "Enviar documentos",
     "send-images": "Enviar imágenes",
