Actualizadas las traducciones.

--- a/Core/Translation/cs_CZ.json
+++ b/Core/Translation/cs_CZ.json
@@ -1331,20 +1331,20 @@
     "select-plugin-zip-file": "Seleccionar plugin (zip):",
     "select-user": "Seleccionar usuario",
     "selected-quantity": "Cant. seleccionada",
-    "selector-number": "Selector",
+    "selector-number": "Selektor",
     "send": "Enviar",
-    "send-anonymous-data": "Enviar datos anónimos",
-    "send-audios": "Enviar audios",
-    "send-documents": "Enviar documentos",
-    "send-images": "Enviar imágenes",
+    "send-anonymous-data": "Odeslat anonymní data",
+    "send-audios": "Odeslat zvuky",
+    "send-documents": "Odeslat dokumenty",
+    "send-images": "Odeslat obrázky",
     "send-invoices": "Enviar facturas",
-    "send-location": "Enviar ubicación",
+    "send-location": "Odeslat umístění",
     "send-mail": "Enviar correo",
     "send-mail-error": "Error al enviar el email",
     "send-mail-ok": "Email enviado correctamente",
-    "send-videos": "Enviar vídeos",
-    "sent-a-audio": "Envió un audio",
-    "sent-a-document": "Envió un documento",
+    "send-videos": "Odeslat videa",
+    "sent-a-audio": "Odeslal zvuk",
+    "sent-a-document": "Odeslal dokument",
     "sent-a-location": "Envió una ubicación",
     "sent-a-picture": "Envió una imagen",
     "sent-a-video": "Envió un video",
