--- a/Core/Translation/fr_FR.json
+++ b/Core/Translation/fr_FR.json
@@ -1266,27 +1266,27 @@
     "reject": "Rechazar",
     "rejected": "Rejeté",
     "related": "Associé",
-    "related-subaccount-bank-charges": "Subcuenta relacionada para gastos bancarios (comisiones, etc)",
-    "related-subaccount-purchases-sales": "Subcuenta relacionada para compras y ventas",
+    "related-subaccount-bank-charges": "Sous-compte lié pour les frais bancaires (commissions, etc)",
+    "related-subaccount-purchases-sales": "Sous-compte lié pour les achats et les ventes",
     "reloading": "Rechargement",
     "remove-filter": "Supprimer le filtre",
     "remove-from-list": "Supprimer",
-    "removing-logs-until": "Eliminando logs hasta el %date%",
+    "removing-logs-until": "Suppression des journaux jusqu'au %date%",
     "renew": "Renouveler",
     "renumber": "Renuméroter",
     "renumber-accounting": "Renuméroter les sièges",
     "renumber-accounting-error": "Une erreur s'est produite lors de la renumérotation des entrées de l'année fiscale %exerciseCode%",
     "renumber-accounting-ok": "Renumérotation des sièges terminés",
-    "renumber-accounting-p": "Renumera los asientos por fecha, de menor a mayor",
-    "renumber-invoices-p": "Renumera las facturas en base a la fecha, de menor a mayor",
-    "renumber-invoices-success": "Las facturas del ejercicio '%exercise%' han sido renumeradas correctamente",
+    "renumber-accounting-p": "Renumerote les écritures par date, de la plus petite à la plus grande",
+    "renumber-invoices-p": "Renumber les factures en fonction de la date, de la plus petite à la plus grande",
+    "renumber-invoices-success": "Les factures de l'exercice '%exercise%' ont été correctement renumérotées",
     "repeat-new-password": "Répéter mot de passe",
     "repeat-password": "Repetir contraseña",
-    "reply": "Respuesta",
+    "reply": "Répondre",
     "report": "Rapport",
     "report-grouping-account": "Grouper par compte",
     "report-non-grouping-account": "Non groupe par compte",
-    "report-taxes-p": "Este informe permite obtener el desglose de impuestos de las facturas de compra o de venta del rango seleccionado",
+    "report-taxes-p": "Ce rapport permet d'obtenir le détail des taxes des factures d'achat ou de vente de la plage sélectionnée",
     "reports": "Rapports",
     "request-sent": "Requête envoyée",
     "required": "Requis",
@@ -1294,7 +1294,7 @@
     "reserved": "Réservé",
     "reset": "Réinitialiser les paramètres",
     "resource": "Ressource",
-    "respond": "Responder",
+    "respond": "Répondre",
     "restore": "Restaurer",
     "restore-data": "Restaurer les données",
     "result": "Résultat",
@@ -1322,8 +1322,8 @@
     "search": "Chercher",
     "search-document": "Entrez le numéro du\/de la %doctype% à rechercher.",
     "search-product": "Rechercher un produit",
-    "second-hand": "Segunda mano",
-    "second-quarter": "2º trimestre",
+    "second-hand": "Seconde main",
+    "second-quarter": "2ème trimestre",
     "second-trimester": "Second trimestre",
     "select": "Sélectionner",
     "select-all": "Tout sélectionner",
@@ -1331,18 +1331,18 @@
     "select-plugin-zip-file": "Sélectionnez le fichier ZIP du module :",
     "select-user": "Sélectionner un utilisateur",
     "selected-quantity": "Qté sélectionnée",
-    "selector-number": "Selector",
+    "selector-number": "Sélecteur",
     "send": "Envoyer",
-    "send-anonymous-data": "Enviar datos anónimos",
-    "send-audios": "Enviar audios",
-    "send-documents": "Enviar documentos",
-    "send-images": "Enviar imágenes",
-    "send-invoices": "Enviar facturas",
-    "send-location": "Enviar ubicación",
+    "send-anonymous-data": "Envoyer des données anonymes",
+    "send-audios": "Envoyer des audios",
+    "send-documents": "Envoyer des documents",
+    "send-images": "Envoyer des images",
+    "send-invoices": "Envoyer des factures",
+    "send-location": "Envoyer le lieu",
     "send-mail": "Evoyer e-mail",
     "send-mail-error": "Erreur lors de l'envoi de l'e-mail",
     "send-mail-ok": "L'e-mail a été envoyé avec succès",
-    "send-videos": "Enviar vídeos",
+    "send-videos": "Envoyer des vidéos",
     "sent-a-audio": "Envió un audio",
     "sent-a-document": "Envió un documento",
     "sent-a-location": "Envió una ubicación",
