--- a/Core/Translation/it_IT.json
+++ b/Core/Translation/it_IT.json
@@ -477,7 +477,7 @@
     "document-without-total": "Documento %document% senza totali o con il totale a 0.",
     "documentation": "documentazione",
     "documents": "Documenti",
-    "documents-generated": "documents-generated",
+    "documents-generated": "documenti-generati",
     "domiciled": "Domiciliato",
     "done": "done",
     "done-date": "Data completamento",
@@ -492,9 +492,9 @@
     "dto": "Disco.",
     "dto-2": "dto-2",
     "duplicate-record": "duplicate-record",
-    "duplicated-reference": "Referencia '%reference%' duplicada",
+    "duplicated-reference": "Riferimento '%reference%' duplicato",
     "duplicated-request": "duplicated-request",
-    "duration": "duration",
+    "duration": "durata",
     "edit": "edit",
     "editable": "Modificabile",
     "email": "e-mail",
