--- a/Core/Translation/pt_BR.json
+++ b/Core/Translation/pt_BR.json
@@ -249,7 +249,7 @@
     "closing-accounting-completed": "cierre-contable-completado",
     "closing-closing-concept": "concepto-de-cierre",
     "closing-opening-concept": "concepto-de-apertura",
-    "closing-operation": "Cierre",
+    "closing-operation": "Encerramento",
     "closing-regularization-concept": "concepto-de-regularización",
     "codbarras": "Código de barras",
     "code": "Código",
