--- a/Core/Translation/va_ES.json
+++ b/Core/Translation/va_ES.json
@@ -516,13 +516,13 @@
     "employee": "Empleat",
     "employees": "employees",
     "empty": "Buit",
-    "empty-contact-data": "El contacto debe tener nombre o email o dirección",
-    "empty-ref-or-missing": "Referencia vacía o producto no encontrado",
+    "empty-contact-data": "El contacte ha de tindre nom o correu electrònic o adreça",
+    "empty-ref-or-missing": "Referència buida o producte no trobat",
     "enable": "Activar",
     "enable-api": "Activar el API",
-    "enable-updates-beta": "Activar actualizaciones beta",
+    "enable-updates-beta": "Activar actualitzacions beta",
     "enabled": "Activat",
-    "enabled-plugins": "Plugins activos",
+    "enabled-plugins": "Plugins actius",
     "encrypt": "Sifrar",
     "end-date": "Data de fi",
     "end-time": "Hora de finalització",
