--- a/Core/Translation/pt_PT.json
+++ b/Core/Translation/pt_PT.json
@@ -225,12 +225,12 @@
     "check-table": "Erro ao verificar a tabela '0'",
     "check-vies": "Comprobar VIES",
     "checked": "Checado",
-    "children": "Niño",
+    "children": "Criança",
     "children-accounts": "Children Accounts",
     "choose-currency": "Choose currency",
     "choose-doc-type": "Choose document type",
     "choose-employee": "Choose employee",
-    "choose-files": "Seleccionar archivos",
+    "choose-files": "Escolher arquivos",
     "choose-payment-method": "Choose payment method",
     "choose-serie": "Seleciona a série",
     "choose-source": "Choose source",
@@ -249,7 +249,7 @@
     "closing-accounting-completed": "fecho-contabilidade-concluída",
     "closing-closing-concept": "fecho-conceito-de-fechamento",
     "closing-opening-concept": "fecho-conceito-de-abertura",
-    "closing-operation": "Cierre",
+    "closing-operation": "Encerramento",
     "closing-regularization-concept": "fecho-conceito-de-regularizacao",
     "codbarras": "Código de barras",
     "code": "Código",
